[package]
name = "shorter-bounds"
authors = [ "nanocryk" ]
description = "Write shorter bounds with a trait alias macro."
edition = "2021"
keywords = [ "macro", "macros", "trait", "alias", "bounds" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nanocryk/shorter-bounds"
version = "0.1.1"
